--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,4 +24,10 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  font-size: 1.5rem;
+}
+
+body h1 {
+  font-weight: 700;
+  color: #f59e0b;
 }
